--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div>
         <p id="first-p">First</p>
         <p id="second-p">Second</p>
+        <input id="type" type="text">
+        <button id="button"></button>
     </div>
     
 </body>
