--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p id="first-p">First</p>
         <p id="second-p">Second</p>
         <input id="type" type="text">
-        <button id="button"></button>
+        <button id="button">OK</button>
     </div>
     
 </body>
