--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>
         <p id="first-p">First</p>
         <p id="second-p">Second</p>
-        <input id="type" type="text">
+        <input id="input" type="text">
         <button id="button">OK</button>
     </div>
     
